--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,9 +5,9 @@
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
-BUILDDIR      = _build
+BUILDDIR      = build
 
-GH_PAGES_SOURCES = docs Makefile _static _template
+GH_PAGES_SOURCES = docs Makefile
 
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
