--- a/docs/Makefile
+++ b/docs/Makefile
@@ -196,7 +196,7 @@ pseudoxml:
 
 gh-pages:
 	git checkout gh-pages
-	rm -rf build _sources _static
+	rm -rf build sources static
 	git checkout working $(GH_PAGES_SOURCES)
 	git reset HEAD
 	make html
