Correcting glpk installation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-glpk
 beautifulsoup4
 python-libsbml
 lxml
 nose
 jupyter
-git+https://github.com/bradfordboyle/pyglpk@master#egg=pyglpk
+git+https://github.com/bradfordboyle/pyglpk@master#egg=glpk
